# Tangler

./: .gitignore  Dockerfile  Dockerfile-devcontainer  README.md  docker-compose.yml  nginx.conf  tangle.py  tangle.yaml  vscode-extensions.sh
app/: .dockerignore  Dockerfile  check_code.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  spaces.yml  tangler.py  tangler.yaml  vscode-extensions.sh
app/_data/: _config.yaml  _links.json  note.json  task.json
app/_data/_config/: _gui.yaml
app/old_code_to_migrate/: tangler.py
app/old_code_to_migrate/src/: cli.py
app/spaces/: .gitignore
app/spaces/tangler.space/: _config.yaml  _links.json  note.json  task.json
app/src/: app.html
app/src/components/: hovering.svelte  icon-button.svelte  icon-switch.svelte  icon.svelte  menu-option.svelte  menu.svelte  prompt.svelte
app/src/routes/: +page.svelte  checks.svelte  client.js  field.svelte  icon-switch.svelte  item-account.svelte  item-check.svelte  item-email.svelte  item-item.svelte  item-modal.svelte  item-note.svelte  item-task.svelte  item-transaction.svelte  item-tree.svelte  item.svelte  items.svelte  navigation.svelte  new-item.svelte  option.svelte  panel.svelte  prompt.svelte  stores.js  styles.svelte  value-selector.svelte
app/src/server/: __init__.py  app.py
app/src/utils/: index.js  (+2 more)
app/tangler/: __init__.py  tangler.py
app/tests/: __init__.py  test_algorighms.py  test_library.py  test_server.py  test_server_requests.py  test_tangler.py  utils_assets.py  utils_fixtures.py  utils_named_asserts.py  utils_requests.py
(+146 files in other folders)
