[tool.poetry]
name = "tangler"
version = "0.1.0"
description = "Simple manager of arbitrary information"
authors = ["Robert Dorna"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"
types-PyYAML = "^6.0.12.10"
Flask = "^2.3.2"
huepy = "^1.2.1"
pydantic = "^2.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.3.0"
pytest = "^7.4.0"
ipython = "^8.14.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
